[package]
name = "sycamore-seoul"
version = "0.2.1"
edition = "2021"
authors = ["Acheul <seoul605.21@gmail.com>"]
repository = "https://github.com/acheul/sycamore-seoul"
description = "Some extentions for Sycamore library"
categories = ["gui", "wasm", "web-programming"]
keywords = ["sycamore", "resize", "web"]
readme = "readme.md"
license = "MIT"

[dependencies]
gloo-utils = "0.2.0"
hashbrown = "0.14.3"
sycamore = { version = "0.9.0-beta.2" }
wasm-bindgen = "0.2.90"

[dependencies.web-sys]
version = "0.3.67"
features = [
  "Window", "Document", "HtmlDocument", "Element", "DomRect",
  "HtmlElement", "CssStyleDeclaration", "DomStringMap",
  "EventTarget", "MouseEvent", "WheelEvent", "AddEventListenerOptions"
]